fix icon styling issue that adds spacing below all icons

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -222,10 +222,6 @@ body {
   margin-bottom: 26.86px;
 }
 
-img, svg {
-  vertical-align: unset !important;
-}
-
 .sidenav .nav-link.active {
   background: linear-gradient(to bottom, #2D2C34, #151419);
   border: 1px solid var(--tradera-border);
